--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="src/css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="assets/js.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Hacker Card</title>
-  <script src="./scenario.js"></script>
+  <script src="src/js/scenario.js"></script>
 </head>
 
 <body class="text-primary m-0 p-0">
@@ -75,7 +75,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="./main.js"></script>
+  <script src="src/js/main.js"></script>
 </body>
 
 </html>
