--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="life-total"></div>
         <div class="thumbnail">👦</div>
-        <div class="name">You</div>
+        <div class="name" id="player">You</div>
       </div>
 
       <div class="card player-card player-color">
