--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="icon" type="image/svg+xml" href="assets/js.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Supermercado+One&family=Syne+Tactile&display=swap" rel="stylesheet">
 
   <title>Hacker Card</title>
   <script src="./scenario.js"></script>
