--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="app" class="game-board">
     <div class="hacker-area">
       <h1>
-        <strong>HACKER CARDS</strong> <br />
+        <strong>HACKER CRDS</strong> <br />
         Choose the card to stop hackers' attack
       </h1>
 
@@ -61,7 +61,7 @@
         <div class="power"></div>
       </div>
 
-      <button class="start-game" onclick="startGame()">Start Game</button>
+      <button class="start-game" onclick="startGame()">Starti Game</button>
       <button class="next-turn" onclick="playTurn()">Next Turn</button>
     </div>
   </div>
