finally basic is ready

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="power"></div>
       </div>
 
-      <button class="start-game" onclick="startGame()">Starti Game</button>
+      <button class="start-game" onclick="startGame()">Start Game</button>
       <button class="next-turn" onclick="playTurn()">Next Turn</button>
     </div>
   </div>
