--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="text-primary m-0 p-0">
   <div id="app" class="game-board">
     <div class="hacker-area">
-      <h1>
+      <h1 class="top-display">
         <strong>HACKER CARDS</strong> <br />
         Choose the card to stop hackers' attack
       </h1>
