--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="name">Hacker</div>
       </div>
 
-      <div class="card hacker-card hacker-color">
+      <div class="card hacker-card hacker-color" id="hacker">
         <div class="text"></div>
         <div class="power"></div>
       </div>
@@ -46,17 +46,17 @@
         <div class="name">You</div>
       </div>
 
-      <div class="card player-card player-color">
+      <div class="card player-card player-color" id="1">
         <div class="text"></div>
         <div class="power"></div>
       </div>
 
-      <div class="card player-card player-color">
+      <div class="card player-card player-color" id="2">
         <div class="text"></div>
         <div class="power"></div>
       </div>
 
-      <div class="card player-card player-color">
+      <div class="card player-card player-color" id="3">
         <div class="text"></div>
         <div class="power"></div>
       </div>
