asking for username

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="life-total"></div>
         <div class="thumbnail">👦</div>
-        <div class="name">You</div>
+        <div class="name" id="username">You</div>
       </div>
 
       <div class="card player-card player-color">
@@ -61,7 +61,7 @@
         <div class="power"></div>
       </div>
 
-      <button class="start-game" onclick="startGame()">Start Game</button>
+      <button class="start-game"  onclick="startGame()">Start Game</button>
       <button class="next-turn" onclick="playTurn()">Next Turn</button>
     </div>
   </div>
